[project]
name = "newport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cssselect>=1.3.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "oauth2client>=4.1.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.10.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mitmproxy>=11.0.2",
]
